resources/webidl2/test/invalid/baseline/id-underscored-number.txt
Syntax error at line 1:
interface _0 {};
          ^ No name for interface
